# rm_back

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  content.md  detail.md  service.yaml
GetTableRow/: CMakeLists.txt  service.yaml
GetTableRow/db_data/: #ib_16384_0.dblwr  LAPTOP-GKAVJAQR.err  auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  my.cnf  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
GetTableRow/db_data/#innodb_redo/: #ib_redo5
GetTableRow/db_data/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
GetTableRow/db_data/mysql/: general_log_213.sdi  slow_log_214.sdi
GetTableRow/db_data/performance_schema/: accounts_145.sdi  binary_log_trans_189.sdi  cond_instances_82.sdi  data_lock_waits_161.sdi  data_locks_160.sdi  error_log_83.sdi  events_errors_su_139.sdi  events_errors_su_140.sdi  events_errors_su_141.sdi  events_errors_su_142.sdi  events_errors_su_143.sdi  events_stages_cu_111.sdi  events_stages_hi_112.sdi  events_stages_hi_113.sdi  events_stages_su_114.sdi  events_stages_su_115.sdi  events_stages_su_116.sdi  events_stages_su_117.sdi  events_stages_su_118.sdi  events_statement_119.sdi  events_statement_120.sdi  events_statement_121.sdi  events_statement_122.sdi  events_statement_123.sdi  events_statement_124.sdi  events_statement_125.sdi  events_statement_126.sdi  events_statement_127.sdi  events_statement_128.sdi  events_statement_129.sdi  events_statement_130.sdi  events_transacti_131.sdi  events_transacti_132.sdi  events_transacti_133.sdi  events_transacti_134.sdi  events_transacti_135.sdi  events_transacti_136.sdi  events_transacti_137.sdi  events_transacti_138.sdi  events_waits_cur_84.sdi  (+70 more)
GetTableRow/db_data/sys/: sys_config.ibd
GetTableRow/scripts/: build.sh  package.sh  start_test_db.sh  stop_test_db.sh
GetTableRow/sql/: init.sql
GetTableRow/src/: main.cpp
audio_resover/: CMakeLists.txt  README.md
audio_resover/include/audio_resover/: AudioChannelConverter.hpp  AudioError.hpp  AudioFormat.hpp  AudioInfo.hpp  AudioReader.hpp  AudioResover.hpp  IAudioDecoder.hpp  IAudioResampler.hpp
audio_resover/src/: AudioReader.cpp  ChannelMixer.cpp  ChannelMixer.hpp  MiniaudioDecoder.cpp  MiniaudioDecoder.hpp  MiniaudioGuard.hpp  MiniaudioResampler.cpp  MiniaudioResampler.hpp  miniaudio_impl.cpp
audio_resover/tests/: CMakeLists.txt  test_audio_reader.cpp
back/: .gitignore  (+4 more)
checker/: .clang-format  CMakeLists.txt  README.md
checker/config/: selftest.json
checker/docs/: dev_guide.md  project_spec.md
checker/include/checker/checkers/: disk_checker.h  display_checker.h  fingerprint_checker.h  light_checker.h  memory_checker.h  microphone_checker.h  model_inference_checker.h  network_checker.h  script_checker.h  tpu_checker.h
checker/include/checker/core/: checker.h  context.h  registry.h  result.h  runner.h
checker/scripts/: bm1684-selftest.service  check_fingerprint.sh  install.sh
checker/src/: main.cpp
checker/src/checkers/: disk_checker.cpp  display_checker.cpp  fingerprint_checker.cpp  light_checker.cpp  memory_checker.cpp  microphone_checker.cpp  model_inference_checker.cpp  network_checker.cpp  register_all.cpp  script_checker.cpp  tpu_checker.cpp
checker/src/core/: context.cpp  registry.cpp  runner.cpp
checker/src/hw/: alsa_capture.cpp  drm_device.cpp  gpio.cpp  serial_port.cpp
checker/src/log/: logger.cpp
checker/src/util/: subprocess.cpp  time_util.cpp
checker/tests/: test_json.cpp
docx_temp_helper/: CMakeLists.txt  README.md  main.cpp
docx_temp_helper/include/docx_temp_helper/: docx_document.h  docx_replacer.h  rich_content.h
docx_temp_helper/src/: docx_document.cpp  docx_replacer.cpp  rich_content.cpp  streaming_processor.cpp  streaming_processor.h  xml_utils.cpp  xml_utils.h  zip_utils.cpp  zip_utils.h
docx_temp_helper/templates/note/: 默认笔记模板.docx
docx_temp_helper/templates/summary/: 联合行文模板_hong.docx
docx_temp_helper/test/: test_error.cpp  test_generate.cpp  test_html.cpp  test_markdown.cpp  test_mixed.cpp  test_plain.cpp  test_streaming.cpp  test_zip.cpp
docx_temp_helper/test/data/: content.html  content.md  output_generate_html.docx  output_generate_md.docx  output_generate_notitle.docx  output_generate_plain.docx  output_mixed.docx  output_plain_wildcard.docx  output_streaming.docx  output_streaming_md.docx
src/: CMakeLists.txt
src/common/: config.cpp  scmd_types.cpp  types.cpp  utils.cpp
src/dbinit/: database_init.cpp  mysql_backend.cpp  opengauss_backend.cpp
src/ipc/: dbus_manager.cpp  protocil.cpp  uds.cpp
src/scmctl/: cli_commands.cpp  cli_paser.cpp  qifeng_scmctl.cpp  scmctl.cpp  scmctl_client.cpp
src/scmd/: config.cpp  dbus_manager.cpp  file_manager.cpp  qifeng_scmd.cpp  scmd.cpp  scmd_server.cpp  service_ctl.cpp  service_generator.cpp  service_manager.cpp  test.cpp  utils.cpp  version.cpp.in
src/service_manger/: file_manager.cpp  key_recoder.cpp  service_generator.cpp  service_manager.cpp
test/function/: CMakeLists.txt  test_mariadb.cpp  test_mariadb_all.cpp
test/unit/: CMakeLists.txt  test_config.cpp  test_database.cpp  test_sd_bus.cpp  test_uds_coc.cpp
test/unit/test_service/: testa.c  testa.service
utils/: CMakeLists.txt  README.md
utils/audio/: CMakeLists.txt
utils/audio/src/: AudioReader.cpp  ChannelMixer.cpp  ChannelMixer.hpp  MiniaudioDecoder.cpp  MiniaudioDecoder.hpp  MiniaudioGuard.hpp  MiniaudioResampler.cpp  MiniaudioResampler.hpp  miniaudio_impl.cpp
utils/audio/tests/: CMakeLists.txt  test_audio_reader.cpp
utils/common/: CMakeLists.txt
utils/doc/: dmpl.md
utils/docx/: CMakeLists.txt  main.cpp
utils/docx/src/: docx_document.cpp  rich_content.cpp  streaming_processor.cpp  streaming_processor.h  xml_utils.cpp  xml_utils.h  zip_utils.cpp  zip_utils.h
utils/docx/templates/: 默认模板.docx
utils/docx/test/: test_error.cpp  test_generate.cpp  test_html.cpp  test_markdown.cpp  test_mixed.cpp  test_plain.cpp  test_streaming.cpp  test_zip.cpp
(+106 files in other folders)
